--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ use the fonts in other ways in the font hierarchy etc. */
   --primary-font: "Chelsea Market", cursive;
   --secondary-font: "Roboto", serif;
   --subHeader-font: "Life Savers", cursive;
-  --main-text-color: #000;
+  --main-text-color: #403030;
 
   --white-space: 1rem;
 }
@@ -38,7 +38,7 @@ a {
 }
 button:hover {
   background-color: var(--link-hover-color);
-  transform: scale(3) rotate(40deg);
+  transform: scale(1.2);
 }
 
 button:active {
@@ -47,7 +47,8 @@ button:active {
 
 a:hover {
   color: var(--link-hover-color);
-  font-size: 4rem;
+  font-size: 1.2rem;
+  font-family: Roboto;
 }
 html {
   font-size: 100%;
@@ -122,6 +123,9 @@ ul {
   margin-right: 5vw;
   height: 15vw;
   width: 20%;
+  color: white;
+  text-align: center;
+  padding-top: 3rem;
 }
 
 ul li:last-child {
@@ -155,19 +159,16 @@ ul li:last-child {
 }
 
 .texture-swatch-1 {
-  background: url(../img/pw_maze_white.png) top left repeat;
+  background: url(../assets/textura-branca-da-tela_1154-645.jpg) top left repeat;
 }
 
 .texture-swatch-2 {
-  background: url(../img/subtle_grunge.png) top left repeat;
-}
-
-.texture-swatch-1 {
-  background: url(../img/pw_maze_white.png) top left repeat;
+  background: url(../assets/textura-madera-pino_1194-5372.jpg) top left repeat;
 }
 
 .texture-swatch-3 {
-  background: url(../img/white_paperboard.png) top left repeat;
+  background: url(../assets/fondo-textura-pared-ladrillo-blanco-moderno_35257-348.jpg)
+    top left repeat;
 }
 
 .images ul {
@@ -267,15 +268,29 @@ footer {
 }
 
 .hatContainer {
-}
-.hatSprite {
-  background-image: url(../assets/sombrerov1.svg);
-  width: max(5vw, 60px);
-  height: max(5vw, 60px);
-  background-size: contain;
   position: absolute;
   right: 2vw;
   top: 2vw;
+  z-index: 5;
+}
+.hatSprite {
+  background-image: url(../assets/sombrerov2.svg);
+  width: max(5vw, 60px);
+  height: max(5vw, 60px);
+  background-size: contain;
+}
+
+.mich {
+  position: absolute;
+  width: max(6vw, 60px);
+  height: max(6vw, 60px);
+  background-image: url(../assets/profilePicIcon.svg);
+  background-size: cover;
+  z-index: 3;
+  right: 1vw;
+  background-color: white;
+  border-radius: 50%;
+  top: 108vh;
 }
 
 .falling {
@@ -293,7 +308,7 @@ footer {
   }
 
   to {
-    transform: translateY(80vh);
+    transform: translateY(100vh);
   }
 }
 
@@ -314,7 +329,51 @@ footer {
 
   50% {
     transform: rotate(15deg);
+    background-image: url(../assets/sombrerov1.svg);
   }
+}
+
+.icono-wraper {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+
+.icono-wraper div {
+  width: 80px;
+  height: 80px;
+}
+
+div.chili {
+  background-image: url(../assets/chiliv2.svg);
+  background-size: cover;
+  width: 30px;
+  height: 30px;
+}
+
+.beef {
+  background-image: url(../assets/beefv2.svg);
+  background-size: cover;
+}
+.pork {
+  background-image: url(../assets/porkv2.svg);
+  background-size: cover;
+}
+.chiken {
+  background-image: url(../assets/chikenv2.svg);
+  background-size: cover;
+}
+.fish {
+  background-image: url(../assets/fishv2.svg);
+  background-size: cover;
+}
+.vegetarian {
+  background-image: url(../assets/vegetarianv2.svg);
+  background-size: cover;
+}
+.vegan {
+  background-image: url(../assets/veganv2.svg);
+  background-size: cover;
 }
 
 @media (min-width: 800px) {
