--- a/css/style.css
+++ b/css/style.css
@@ -333,6 +333,13 @@ footer {
   }
 }
 
+section.iconos {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  align-items: center;
+}
+
 .icono-wraper {
   display: flex;
   flex-wrap: wrap;
